<resources>
	<string name="app_name" translatable="false">Mileage</string>
	<string name="creating_chart">Creating chart&#8230;</string>
	<string name="status_partial">partial</string>
	<string name="unit_price_volume">Unit price, volume</string>
	<string name="cost_volume">Total cost, volume</string>
	<string name="cost_unit_price">Total cost, unit price</string>
	<string name="vehicles">Vehicles</string>
	<string name="save_changes">Save changes</string>
	<string name="empty_fillups">No saved fillups for this vehicle!\nGo fill up your tank and try again.</string>
	<string name="empty_fields">No additional fields have been created!\nPress menu or use the button below to add as many as you want!</string>
	<string name="toast_calculating_avg_economy">Calculating average fuel economy&#8230;</string>
	<string name="toast_vehicle_set_as_default">Vehicle set as default!</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="partial_fillup">Tank was not filled to the top</string>
	<string name="odometer">Odometer</string>
	<string name="close">Close</string>
	<string name="add_fillup">Save Fillup</string>
	<string name="fillup">Fillup</string>
	<string name="history">History</string>
	<string name="statistics">Statistics</string>
	<string name="add">Add</string>
	<string name="add_field">Add new field</string>
	<string name="field_title">Title</string>
	<string name="field_description">Description</string>
	<string name="edit_fields">Edit fields</string>
	<string name="add_vehicle_type">Add new vehicle type</string>
	<string name="add_vehicle">Add new vehicle</string>
	<string name="edit_vehicle_types">Edit vehicle types</string>
	<string name="set_vehicle_as_default">This is the default vehicle</string>
	<string name="set_vehicle_as_default_menu">Set vehicle as default</string>
	<string name="perform_backup">Perform backup</string>
	<string name="no_chart">No chart for this statistic (yet!)</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="start_import">Import data</string>
	<string name="erase_database">Erase database before importing</string>
	<string name="start_export">Export data</string>
	<string name="done">Done</string>
	<string name="dialog_title_delete">Really delete?</string>
	<string name="dialog_message_delete">Are you sure you want to delete this? This cannot be undone!</string>
	<string name="dialog_title_missing_files">Missing files?</string>
	<string name="dialog_message_missing_files">To import files, place them in the \"mileage/\" folder in the root of your SD card.</string>
	<string name="dialog_title_meta_fields">Extra field</string>
	<string name="delta_days">Days</string>
	<string name="delta_weeks">Weeks</string>
	<string name="delta_months">Months</string>
	<string name="delta_years">Years</string>
	<string name="distance">Distance</string>
	<string name="duration">Duration</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="year">Year</string>
	<string name="make">Make</string>
	<string name="model">Model</string>
	<string name="price_per_unit">Price per %1$s</string>
	<string name="total_cost">Total cost</string>
	<string name="settings">Settings</string>
	<string name="settings_location">Store location</string>
	<string name="settings_location_on">Your location for fillups will be stored privately</string>
	<string name="settings_location_off">No location information will be stored at all</string>
	<string name="settings_currency_title">Currency symbol</string>
	<string name="settings_currency_summary">What symbol to use when displaying money</string>
	<string name="settings_data_format_title">Fillup options</string>
	<string name="settings_data_format_summary">Choose the most convenient way to enter data</string>
	<string name="settings_about">About</string>
	<string name="settings_about_summary">About Mileage %1$s</string>
	<string name="settings_units">Change units</string>
	<string name="settings_units_summary">How to set gallons/litres/km/etc.</string>
	<string name="settings_meta_field_title">Extra field</string>
	<string name="settings_meta_field_summary">Choose which field to show in fillup history</string>
	<string name="settings_auto_backup_title">Perform backups</string>
	<string name="settings_auto_backup_on">Your data will be automatically copied to external storage</string>
	<string name="settings_auto_backup_off">Backups will not be automatically made</string>
	<string name="units_title">Setting Units</string>
	<string name="units_description">Units are stored per-vehicle. To change, open the Vehicles tab, select your vehicle, scroll down, and set your units. Save your vehicle, then go to Statistics tab, press \'menu\', select \'Recalculate\' to see changes immediately.</string>
	<string name="import_export">Import / Export</string>
	<string name="import_data">Import data</string>
	<string name="export_data">Export data</string>
	<string name="import_export_text">If you need to get data off your device, or load data from an external source, this is where you want to be. In order to import or export data, use the \"mileage/\" folder on your device; you\'ll likely need to connect to your computer via USB for this.</string>
	<string name="import_csv_mapping_text">Use this screen to set which fields in the CSV file map to database fields. The left-hand column represents data in the CSV file; the right-hand column options are fields in the database.</string>
	<string name="import_csv_vehicle_text">Set which vehicles map to imported vehicles. The left-hand side is for vehicles Mileage already knows about; match them up with the appropriate values on the right.</string>
	<string name="import_csv_date_format">Make sure that we know how to read your date strings! Use the selector in the middle to make the top and bottom dates be the same. The top is what we read from the file and the bottom is how we are parsing it.</string>
	<string name="divider_fillup_info">Fillup information</string>
	<string name="divider_fillup_fields">Extra data</string>
	<string name="divider_fillup_statistics">Statistics</string>
	<string name="divider_vehicle_units">Measurement units</string>
	<string name="divider_vehicle_type">Vehicle type</string>
	<string name="divider_vehicle_information">Vehicle information</string>
	<string name="divider_loaded_date">Saved date</string>
	<string name="divider_date_format">Date format</string>
	<string name="divider_parsed_date">Parsed date</string>
	<string name="divider_about_app">About Mileage</string>
	<string name="divider_about_graphics">Graphics donated by Steve Albright</string>
	<string name="divider_about_charts">Charts donated by aiCharts</string>
	<string name="divider_about_translators">Translated by</string>
	<string name="stat_fuel_economy">Fuel economy</string>
	<string name="stat_avg_economy">Average fuel economy</string>
	<string name="stat_min_economy">Worst fuel economy</string>
	<string name="stat_max_economy">Best fuel economy</string>
	<string name="stat_distance_between_fillups">Distance between fillups</string>
	<string name="stat_avg_distance">Average distance</string>
	<string name="stat_min_distance">Minimum distance</string>
	<string name="stat_max_distance">Maximum distance</string>
	<string name="stat_fillup_cost">Fillup costs</string>
	<string name="stat_avg_cost">Average cost</string>
	<string name="stat_min_cost">Minimum cost</string>
	<string name="stat_max_cost">Maximum cost</string>
	<string name="stat_total_cost">Total cost</string>
	<string name="stat_avg_month_cost">Estimated cost per month</string>
	<string name="stat_avg_year_cost">Estimated cost per year</string>
	<string name="stat_last_month_cost">Cost last month</string>
	<string name="stat_last_year_cost">Cost last year</string>
	<string name="stat_cost_per_distance">Cost per distance</string>
	<string name="stat_avg_cost_per_distance">Average cost per %s</string>
	<string name="stat_min_cost_per_distance">Minimum cost per %s</string>
	<string name="stat_max_cost_per_distance">Maximum cost per %s</string>
	<string name="stat_price">Fuel price</string>
	<string name="stat_avg_price">Average price</string>
	<string name="stat_min_price">Minimum price</string>
	<string name="stat_max_price">Maximum price</string>
	<string name="stat_fuel">Fuel consumption</string>
	<string name="stat_min_fuel">Smallest fillup</string>
	<string name="stat_max_fuel">Largest fillup</string>
	<string name="stat_avg_fuel">Average fillup</string>
	<string name="stat_total_fuel">Total fuel</string>
	<string name="stat_fuel_per_year">Fuel per year</string>
	<string name="stat_location">Fillup locations</string>
	<string name="stat_north">North</string>
	<string name="stat_south">South</string>
	<string name="stat_east">East</string>
	<string name="stat_west">West</string>
	<string name="info_distance">Distance</string>
	<string name="info_economy">Economy</string>
	<string name="error_no_vehicle_specified">No vehicle was specified</string>
	<string name="error_no_odometer_specified">Invalid value for odometer</string>
	<string name="error_no_volume_specified">Invalid value for volume</string>
	<string name="error_no_price_specified">Invalid value for price</string>
	<string name="error_no_total_cost_specified">Invalid value for total cost</string>
	<string name="error_date_in_past">The date cannot be for the future</string>
	<string name="error_invalid_field_title">Invalid field title</string>
	<string name="error_invalid_field_description">Invalid field description</string>
	<string name="error_invalid_field_type">Invalid field type</string>
	<string name="error_invalid_template_id">Invalid field template ID</string>
	<string name="error_invalid_fillup_id">Invalid fillup ID</string>
	<string name="error_invalid_vehicle_title">Invalid vehicle title</string>
	<string name="error_invalid_vehicle_year">Invalid vehicle year</string>
	<string name="error_invalid_vehicle_make">Invalid vehicle make</string>
	<string name="error_invalid_vehicle_model">Invalid vehicle model</string>
	<string name="error_invalid_vehicle_type">Vehicle type not set</string>
	<string name="error_invalid_vehicle_type_title">Invalid vehicle type title</string>
	<string name="error_invalid_vehicle_type_description">Invalid vehicle type description</string>
	<string name="error_invalid_template_title">Invalid template title</string>
	<string name="error_invalid_template_description">Invalid template description</string>
	<string name="error_invalid_template_distance">Invalid template distance</string>
	<string name="error_invalid_template_duration">Invalid template duration</string>
	<string name="error_invalid_template_vehicle_type">Vehicle type not specified</string>
	<string name="error_invalid_statistic_item">Invalid item specified for the statistic</string>
	<string name="error_invalid_statistic_key">Invalid key specified for the statistic</string>
	<string name="error_media_unmounted">SD card unmounted or not present!</string>
	<string name="error_could_not_parse_date">Could not parse date!</string>
	<string name="units_gallons">Gallons</string>
	<string name="units_gallons_abbr">g</string>
	<string name="units_litres">Litres</string>
	<string name="units_litres_abbr">L</string>
	<string name="units_imperial_gallons">Imperial Gallons</string>
	<string name="units_miles">Miles</string>
	<string name="units_miles_abbr">mi</string>
	<string name="units_kilometers">Kilometers</string>
	<string name="units_kilometers_abbr">km</string>
	<string name="units_per">%1$s / %2$s</string>
	<string name="units_miles_per_gallon">Miles / Gallon</string>
	<string name="units_miles_per_imperial_gallon">Miles / Imp. Gal.</string>
	<string name="units_mpg">mpg</string>
	<string name="units_miles_per_litre">Miles / Litre</string>
	<string name="units_mpl">mpL</string>
	<string name="units_kilometers_per_gallon">Km / Gallon</string>
</resources>