<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
	<CheckBoxPreference
		android:key="location_data"
		android:defaultValue="true"
		android:title="@string/settings_location"
		android:summaryOn="@string/settings_location_on"
		android:summaryOff="@string/settings_location_off"
	/>
	<ListPreference
		android:key="data_format"
		android:title="@string/settings_data_format_title"
		android:summary="@string/settings_data_format_summary"
		android:entries="@array/data_formats"
		android:entryValues="@array/data_format_values"
		android:defaultValue="0"
	/>
	<CheckBoxPreference
	    android:key="auto_backup"
	    android:title="@string/settings_auto_backup_title"
	    android:summaryOn="@string/settings_auto_backup_on"
	    android:summaryOff="@string/settings_auto_backup_off"
	    android:defaultValue="true"
	/>
	<PreferenceCategory
		android:orderingFromXml="true"
		android:title="@string/settings"
		android:key="units_header"
	>
		<Preference
			android:key="units"
			android:title="@string/settings_units"
			android:summary="@string/settings_units_summary"
		/>
	</PreferenceCategory>
	<Preference
		android:key="about"
		android:title="@string/settings_about"
		android:summary="@string/settings_about_summary"
	/>
</PreferenceScreen>